p2/confs/app2-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  selector:
    app: app2
  ports:
  - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
spec:
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: nginx:1.27-alpine
        ports:
        - containerPort: 80
